# task3

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_search.cpp
src/: CMakeLists.txt  main.cpp
src/file_reader/: CMakeLists.txt  file_reader.cpp  file_reader.h
src/query_engine/: CMakeLists.txt  query_engine.cpp  query_engine.h
src/text_processor/: CMakeLists.txt
